<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">

            <com.puxiansheng.www.common.StateBarView
                android:id="@+id/appStatusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:padding="18dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="14dp"
                    android:text="@string/setting"
                    android:textColor="@color/input_text_blank"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_userinfo"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textColor="@color/input_text_blank"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:text="@string/user_manager"/>

            <TextView
                android:id="@+id/user_phone_num"
                android:layout_width="400dp"
                android:layout_height="54dp"
                android:textColor="@color/text_gray"
                android:drawableRight="@mipmap/ic_arrow"
                android:layout_alignTop="@+id/txt_userinfo"
                android:drawablePadding="6dp"
                android:gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:textSize="16sp"/>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_gray"
                android:layout_below="@+id/user_phone_num"/>

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textColor="@color/input_text_blank"
                android:layout_below="@+id/line2"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:text="@string/password_manager"/>

            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:textColor="@color/text_gray"
                android:drawableRight="@mipmap/ic_arrow"
                android:layout_alignTop="@+id/txt_password"
                android:drawablePadding="6dp"
                android:gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:text="@string/change_password"
                android:textSize="16sp"/>

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_gray"
                android:layout_below="@+id/change_password"/>


            <TextView
                android:id="@+id/txt_permission"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textColor="@color/input_text_blank"
                android:layout_below="@+id/line3"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:text="权限管理"/>

            <TextView
                android:id="@+id/change_permission"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:textColor="@color/text_gray"
                android:drawableRight="@mipmap/ic_arrow"
                android:layout_alignTop="@+id/txt_permission"
                android:drawablePadding="6dp"
                android:gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:text="修改"
                android:textSize="16sp"/>

            <View
                android:id="@+id/line10"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_gray"
                android:layout_below="@+id/change_permission"/>

            <TextView
                android:id="@+id/txt_about_us"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textColor="@color/input_text_blank"
                android:layout_below="@+id/line10"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:text="@string/about_us"/>

            <TextView
                android:id="@+id/user_company"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:textColor="@color/text_gray"
                android:drawableRight="@mipmap/ic_arrow"
                android:layout_alignTop="@+id/txt_about_us"
                android:drawablePadding="6dp"
                android:gravity="center_vertical|right"
                android:text="@string/company_name"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:textSize="16sp"/>

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_gray"
                android:layout_below="@+id/user_company"/>

<!--            <TextView-->
<!--                android:id="@+id/txt_consult"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="53dp"-->
<!--                android:gravity="center_vertical"-->
<!--                android:textColor="@color/input_text_blank"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_below="@+id/line4"-->
<!--                android:textSize="16sp"-->
<!--                android:text="@string/term_consult"/>-->

<!--            <TextView-->
<!--                android:id="@+id/name_consult"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="54dp"-->
<!--                android:textColor="@color/text_gray"-->
<!--                android:layout_alignTop="@+id/txt_consult"-->
<!--                android:gravity="center_vertical"-->
<!--                android:text="@string/consult_name"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:textSize="16sp"/>-->


<!--            <TextView-->
<!--                android:id="@+id/txt_consult"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="53dp"-->
<!--                android:gravity="center_vertical"-->
<!--                android:textColor="@color/input_text_blank"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_below="@+id/line4"-->
<!--                android:textSize="16sp"-->
<!--                android:text="隐私政策"/>-->

<!--            <TextView-->
<!--                android:id="@+id/name_consult"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="54dp"-->
<!--                android:textColor="@color/text_gray"-->
<!--                android:drawableRight="@mipmap/ic_arrow"-->
<!--                android:layout_alignTop="@+id/txt_consult"-->
<!--                android:gravity="center_vertical|right"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:textSize="16sp"/>-->

<!--            <View-->
<!--                android:id="@+id/line5"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0.5dp"-->
<!--                android:background="@color/line_gray"-->
<!--                android:layout_below="@+id/name_consult"/>-->

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textColor="@color/input_text_blank"
                android:layout_below="@+id/line4"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:text="@string/current_version"/>

            <TextView
                android:id="@+id/curren_version"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:textColor="@color/text_gray"
                android:layout_alignTop="@+id/txt_version"
                android:drawableRight="@mipmap/ic_arrow"
                android:drawablePadding="6dp"
                android:gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:textSize="16sp"/>

            <View
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_gray"
                android:layout_below="@+id/curren_version"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/logout"
            style="@style/loginBtStyle"
            android:text="退出登录"
            android:background="@drawable/bg_bt_login_slected"
            android:textColor="@color/white"
            android:clickable="true"
            android:layout_marginTop="230dp"/>

    </LinearLayout>

</layout>